[gd_scene load_steps=6 format=3 uid="uid://8gcoiiugnffq"]

[ext_resource type="Script" uid="uid://cqyiebdabtxr6" path="res://Audio_Settings/audio_settings.gd" id="1_j3r4d"]
[ext_resource type="Texture2D" uid="uid://bfu6gedajlpo" path="res://assets/UI/post-baroque-uigui-kit/Post-Baroque UI Kit/UI Icons/Gray/Icons Gray/UI_IconsGray_06.png" id="3_mh037"]
[ext_resource type="Theme" uid="uid://bwjl0xwp728bj" path="res://Resources/ui_theme.tres" id="3_nun0c"]
[ext_resource type="Texture2D" uid="uid://bhcst38dbhjyx" path="res://assets/UI/post-baroque-uigui-kit/Post-Baroque UI Kit/UI Icons/Gray/Icons Gray/UI_IconsGray_07.png" id="4_ymw86"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l8his"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mh037")
}],
"loop": true,
"name": &"mute",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ymw86")
}],
"loop": true,
"name": &"unmute",
"speed": 5.0
}]

[node name="Audio_settings" type="Node2D"]
script = ExtResource("1_j3r4d")

[node name="settings" type="Control" parent="."]
z_index = 8
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = 36.0
offset_right = -16.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="master_volume_slider" type="HSlider" parent="settings"]
layout_mode = 0
offset_left = 357.0
offset_top = 233.0
offset_right = 646.0
offset_bottom = 251.0
theme = ExtResource("3_nun0c")
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="music_volume_slider" type="HSlider" parent="settings"]
layout_mode = 0
offset_left = 357.0
offset_top = 267.0
offset_right = 646.0
offset_bottom = 285.0
theme = ExtResource("3_nun0c")
min_value = -30.0
max_value = 0.0

[node name="sfx_volume_slider" type="HSlider" parent="settings"]
layout_mode = 0
offset_left = 357.0
offset_top = 304.0
offset_right = 646.0
offset_bottom = 322.0
theme = ExtResource("3_nun0c")
min_value = -30.0
max_value = 0.0

[node name="master_anim" type="AnimatedSprite2D" parent="settings"]
position = Vector2(668.525, 242.05)
scale = Vector2(1.45, 1.45)
sprite_frames = SubResource("SpriteFrames_l8his")
animation = &"unmute"
autoplay = "unmute"

[node name="music_anim" type="AnimatedSprite2D" parent="settings"]
position = Vector2(668.525, 276.05)
scale = Vector2(1.45, 1.45)
sprite_frames = SubResource("SpriteFrames_l8his")
animation = &"unmute"
autoplay = "unmute"

[node name="sfx_anim" type="AnimatedSprite2D" parent="settings"]
position = Vector2(668.525, 313.05)
scale = Vector2(1.45, 1.45)
sprite_frames = SubResource("SpriteFrames_l8his")
animation = &"unmute"
autoplay = "unmute"

[node name="master_label" type="Label" parent="settings"]
texture_filter = 1
layout_mode = 0
offset_left = 126.0
offset_top = 232.0
offset_right = 223.0
offset_bottom = 267.0
scale = Vector2(1.57, 1.57)
theme = ExtResource("3_nun0c")
text = "MASTER"

[node name="music_label" type="Label" parent="settings"]
layout_mode = 0
offset_left = 126.0
offset_top = 264.0
offset_right = 205.0
offset_bottom = 299.0
scale = Vector2(1.57, 1.57)
theme = ExtResource("3_nun0c")
text = "MUSIC"

[node name="sfx_label" type="Label" parent="settings"]
layout_mode = 0
offset_left = 127.0
offset_top = 300.0
offset_right = 172.0
offset_bottom = 335.0
scale = Vector2(1.57, 1.57)
theme = ExtResource("3_nun0c")
text = "SFX"

[node name="master_mute_button" type="Button" parent="settings"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 655.525
offset_top = 228.0
offset_right = 680.525
offset_bottom = 254.0

[node name="music_mute_button" type="Button" parent="settings"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 655.525
offset_top = 263.0
offset_right = 680.525
offset_bottom = 288.0

[node name="sfx_mute_button" type="Button" parent="settings"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 654.525
offset_top = 300.0
offset_right = 680.525
offset_bottom = 324.0

[connection signal="value_changed" from="settings/master_volume_slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="settings/music_volume_slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="settings/sfx_volume_slider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="settings/master_mute_button" to="." method="_on_master_mute_button_pressed"]
[connection signal="pressed" from="settings/music_mute_button" to="." method="_on_music_mute_button_pressed"]
[connection signal="pressed" from="settings/sfx_mute_button" to="." method="_on_sfx_mute_button_pressed"]
